--- a/src/scss/base/_typography.scss
+++ b/src/scss/base/_typography.scss
@@ -30,7 +30,7 @@ body {
 }
 
 h1 {
-  font-size: ($font-size-h1 * .9);
+  font-size: ($font-size-h1 * .8);
   line-height: 5.71rem;
 }
 
