--- a/src/scss/components/_nav.scss
+++ b/src/scss/components/_nav.scss
@@ -31,7 +31,7 @@ nav {
 .top-nav {
   border-left: 2rem solid color(tomato-red);
   display: flex;
-  flex-flow: row wrap;
+  flex-flow: column;
   padding-left: ($gutter / 2);
   width: 100vw;
 
@@ -51,6 +51,7 @@ nav {
   ul {
     display: flex;
     flex: 3;
+    justify-content: space-around;
     list-style: none;
     margin-bottom: ($line-height / 3);
     margin-top: ($gutter / 2);
@@ -59,9 +60,9 @@ nav {
 
   li {
     display: flex;
-    flex: 1;
+    flex: 1 1 auto;
     padding-bottom: ($line-height / 3);
-    padding-left: ($gutter / 2);
+    padding-left: $gutter;
     // padding-right: ($gutter / 2);
     // padding-top: ($line-height / 3);
 
@@ -99,7 +100,7 @@ nav {
   }
 
   .top-nav {
-    flex-flow: row nowrap;
+    flex-flow: row;
 
     .logo {
       margin-top: $line-height;
